# SwiftImGui

./: CMakeLists.txt  Generator.swift  Package.swift  README.md
ModuleMaps/CImGui/: module.modulemap
Sources/: CMakeLists.txt
Sources/CImGui/: CMakeLists.txt  cimgui.cpp
Sources/CImGui/imgui/: imconfig.h  imgui.h  imgui_demo.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_textedit.h
Sources/CImGui/include/: CImGui.h  cimgui.h  cimgui_include.h  imgui.h
Sources/ImGui/: CMakeLists.txt  ImGui+SwiftExtensions.swift  ImGui.swift  RenderData.swift
Sources/SwiftImGuiGenerator/: CType.swift  Function.swift  ReflectionPrinter.swift  StructsAndEnums.swift  main.swift
